finally fixing issue with connecting Mongodb

--- a/e2e-backend/config.env
+++ b/e2e-backend/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://hosamabdulmaged:7BZmZJiSTEXlsIqy@cluster0.mfzrlos.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://hosamabdulmaged:7837xGoJm8bD2AIK@cluster0.mfzrlos.mongodb.net/?retryWrites=true&w=majority
 PORT=8080
